Update and rename allocating-memory_c-cpp-memory-gdb-pointers-address-stack-heap_3-2021-04-27.md to 8077e73d57a8b8bf33cf981416a811a7.md

--- a/8077e73d57a8b8bf33cf981416a811a7.md
+++ b/8077e73d57a8b8bf33cf981416a811a7.md
@@ -1,3 +1,7 @@
+Allocating Memory
+c, cpp, memory, gdb, pointers, address, stack, heap
+27/04/2021
+
 # Allocating Memory
 
 In C/C++ there are different ways of allocating memory, each way allocating the memory in different areas in our computer memory, I'm going to explain how to allocate in both ways.  
